--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -9,7 +9,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [-100, -100, -100]
+      Translation: [-10.5980415, 61.5929871, 3.64534569]
       Rotation: [-179.999893, 71.0184402, -179.999893]
       Scale: [0.999999881, 1, 0.999999881]
     Com_Light:
@@ -21,8 +21,8 @@ GameObjects:
       Specular: [1, 1, 1, 1]
     RenderGroup: 1
     FrustumRange: 1
-  - Name: Tile
-    UUID: 12057796898222496639
+  - Name: Roof
+    UUID: 17905721910628997374
     Active: true
     Layer: Default
     Instancing: false
@@ -30,366 +30,303 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0.0592849255, -1.04400003, 0]
+      Translation: [0, 19.9440002, 0]
       Rotation: [0, -0, 0]
-      Scale: [4.7457571, 1, 4.30000019]
+      Scale: [0.5, 0.5, 0.5]
     Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Map\
-      MeshFileName: sagak.fbx
-      HasCollider: true
+      MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon2\Roof\
+      MeshFileName: Roof.fbx
+      HasCollider: false
       Equipment: false
     RenderGroup: 1
-    FrustumRange: 3000
-  - Name: Empty Object
-    UUID: 3794401217447824298
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [3.78647399, 0, 0]
-      Rotation: [90, -0, 0]
-      Scale: [0.999879777, 1, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.png
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: E_MeteoDropArea
-    UUID: 5243742198099154231
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, -1.68498016e-08, 0]
-      Rotation: [90, -0, 0]
-      Scale: [0.998848021, 1, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\002.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_GstarMagicCircle_001_Tex_PYS.png
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: true
-      FadeOutDuration: 1
-      FadeOutStratTime: 4
-      FadeIn: true
-      FadeInDuration: 3
-      FadeInStratTime: 0
-      EffectDuration: 5
-  - Name: E_MeteoDropAfter
-    UUID: 12452118736208502
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [1.26873755, 0.0751133785, -0.387277424]
-      Rotation: [-79.0236282, -0, 0]
-      Scale: [2, 2, 2]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Impact_006_TEX_KKJ.png
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: true
-      FadeOutDuration: 5
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 5
-      FadeInStratTime: 0
-      EffectDuration: 5
-  - Name: Empty Object
-    UUID: 11150502683771309157
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [1.55959868, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: E_MeteoDropArea
-    UUID: 5980680300891787126
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, -1.68498016e-08, 0]
-      Rotation: [90, -0, 0]
-      Scale: [0.998831213, 1, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\002.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_GstarMagicCircle_001_Tex_PYS.png
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: true
-      FadeOutDuration: 12
-      FadeOutStratTime: 10
-      FadeIn: true
-      FadeInDuration: 5
-      FadeInStratTime: 0
-      EffectDuration: 12
-  - Name: E_MeteoFire
-    UUID: 61009448689612205
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 12
-    BillBord: true
-    Com_Transform:
-      Translation: [0.0134859178, 0.697222233, 0.215248793]
-      Rotation: [11.43507, -0, 0]
-      Scale: [2.19759321, 1.93021083, 2.47141314]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Explosion_sub_04.dds
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [0, 0, 0]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: E_Meteo
-    UUID: 10944695665215999857
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [0.100000001, 0.100000001, 0.100000001]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: FireBallMesh.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\002.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_fireMask_02.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire01_Step_TEX.tga
-      ScrollSpeedX: [-0.5, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 5.30000019
-      DistortionBias: 0.200000003
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: E_MeteoEnd
-    UUID: 898772190028004214
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: true
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [11.43507, -0, 0]
-      Scale: [1.14648795, 0.967018366, 0.995557427]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_SelectRing_001_TEX_KKJ.png
-      TextureNoisePath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: Empty Object
-    UUID: 2207155654362263632
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [-1.86564922, 0.33750093, 1.38221025]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 0.300000012]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\2024b157.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_SmokeMask_003_TEX_KKJ.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_Smoke_034_TEX_HKB.png
-      ScrollSpeedX: [0.300000012, 0.400000006, 0.200000003]
-      ScrollSpeedY: [-0.800000012, 0.899999976, 3.0999999]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.300000012
-      DistortionBias: 0.300000012
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: E_Meteo
-    UUID: 10983549849714823131
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [0.100000001, 0.100000001, 0.100000001]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: FireBallMesh.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\002.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_fireMask_02.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire01_Step_TEX.tga
-      ScrollSpeedX: [-0.5, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 5.30000019
-      DistortionBias: 0.200000003
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-  - Name: O_MeteoOBB
-    UUID: 7920848272098640496
+    FrustumRange: 100
+  - Name: Floor
+    UUID: 2370993724810836214
     Active: true
     Layer: Default
     Instancing: false
     Type: Object
     PassIndex: 0
-    NumOBB: 1
+    NumOBB: 0
     Com_Transform:
       Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_OBB:
+      Scale: [17, 2, 17]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon2\BADAK\
+      MeshFileName: badack2.fbx
+      HasCollider: true
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 100
+  - Name: Water
+    UUID: 4587213756306410097
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 4
+    BillBord: false
+    Com_Transform:
+      Translation: [-4.82443568e-07, -0.534016311, 1.15133778e-08]
+      Rotation: [90, 7.99991941, 0.000104272069]
+      Scale: [34.9999962, 35, 0.999993742]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_Sky_001_TEX_HKB.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\abs.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Fx_Water_002_Tex_Pys.png
+      ScrollSpeedX: [-0.100000001, -0.100000001, 0]
+      ScrollSpeedY: [-0.100000001, -0.191, 2.20000005]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.600000024
+      DistortionBias: 1.29999995
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+  - Name: CamCollider1
+    UUID: 12612541215930593208
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 0, 16.775095]
+      Rotation: [0, -0, 0]
+      Scale: [1.36710548, 1, 1]
+    Com_Collider:
       Center: [0, 0, 0]
-      Size: [0.5, 0.5, 0.5]
-      IsAttach: false
-      BoneName: ""
-      Offset: [0, 0, 0]
-      CollisionType: 5
-    Com_Stat:
-      Hp: [0, 0, 0, 0]
-      HpRegen: [0, 0]
-      Atk: [3, 0, 3]
-      Arm: [0, 0, 0]
-      Exp: [0, 0, 0]
-      Level: 1
-      Gold: 0
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 0
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 50
+  - Name: CamCollider1
+    UUID: 9745437605041046302
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 0, -16.8658218]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 0
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 50
+  - Name: CamCollider1
+    UUID: 10935363635551892603
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [17.6701775, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 88.2999878
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
     RenderGroup: 1
     FrustumRange: 1
+  - Name: CamCollider1
+    UUID: 6112912549688330657
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [-16.9572678, -7.91756535, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 89.1999741
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: CamCollider1
+    UUID: 17102987229334579348
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [13.5109024, 0, 14.7879868]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 41.3999786
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: CamCollider1
+    UUID: 198818307398218000
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [-11.4570007, -0.441026688, -11.7280445]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 42.1999817
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: CamCollider1
+    UUID: 1703599836712041815
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [14.7802696, -2.40487099, -14.0734959]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - 136.300003
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: CamCollider1
+    UUID: 15671853698510492452
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [-18.553648, -0.7693609, 7.52751684]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [25, 25, 8]
+      Angle:
+        - 0
+        - -62.7999878
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: Wall
+    UUID: 7540281682007890871
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 6.69999981, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.5, 0.5, 0.5]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon2\Wall\
+      MeshFileName: Wall.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 500
